<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/Layout_SigUp_Logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/edittext_Signin"
            android:fontFamily="@font/yak_air"
            android:textAlignment="center"
            android:textSize="50dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Layout_Sigup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Layout_SigUp_Logo"
        android:orientation="vertical">

        //ID Input

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            android:text="아이디"
            android:textSize="20dp">

            <EditText
                android:id="@+id/Edittext_Signup_Id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yak_air"
                android:hint="@string/text_ID"
                android:inputType="text" />

            //Id_check Button

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Btn_Id_check"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/yak_air"
                android:text="@string/btn_Id_check" />
        </com.google.android.material.textfield.TextInputLayout>

        //Password Input

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="아이디"
            android:textSize="20dp">

            <EditText
                android:id="@+id/Edittext_Signup_Password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/edittext_Password"
                android:inputType="textPassword" />
            <!--         inputtype이 textpassword일경우 오류있음    android:fontFamily="@font/yak_air"-->
        </com.google.android.material.textfield.TextInputLayout>

        //rePassword Input

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="아이디"
            android:textSize="20dp">

            <EditText
                android:id="@+id/Edittext_Signup_rePassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/edittext_rePassword"
                android:inputType="textPassword" />
            <!--        inputtype이 textpassword일경우 오류있음     android:fontFamily="@font/yak_air"-->
        </com.google.android.material.textfield.TextInputLayout>

        //User Name Input

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="이름"
            android:textSize="20dp">

            <EditText
                android:id="@+id/Edittext_Signup_UserName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/yak_air"
                android:hint="@string/edittext_UserName"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        //Email Input

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="이메일"
            android:textSize="20dp">

            <EditText
                android:id="@+id/Edittext_Signup_Email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/yak_air"
                android:hint="@string/edittext_Email"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        //Connect User Input

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="연결 회원 아이디"
            android:textSize="20dp">

            <EditText
                android:id="@+id/Edittext_Signup_CUser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/yak_air"
                android:hint="@string/edittext_CUser"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tv_birth"
                android:textSize="20sp" />

            <DatePicker
                android:id="@+id/DatePicker_Sing_Up"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tv_sex"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/Sign_Up_radiogroup_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/Sign_Up_radiobutton_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rdbtn_male"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/Sign_Up_radiobutton_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rdbtn_female"
                    android:checked="false"/>
            </RadioGroup>
        </LinearLayout>


        //Sign up Button

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Login_Button_ID"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/yak_air"
            android:text="@string/btn_Id_signin" />

    </LinearLayout>
</RelativeLayout>