<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_bltboard_Notification"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_bltboard_Notification"
        android:textSize="15sp" />
        <RadioGroup
            android:id="@+id/radiogroup_bltboard"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/radiobutton_bltboard_on"
                android:text="O"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/radiobutton_bltboard_off"
                android:text="X"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_comments_Notification"
            android:textSize="15sp" />
        <RadioGroup
            android:id="@+id/radiogroup_ripple"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/radiogroup_ripple_on"
                android:text="O"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/radiogroup_ripple_off"
                android:text="X"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tv_visual"
            android:textSize="15sp" />
        <RadioGroup
            android:id="@+id/radiogroup_help"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/radiogroup_help_on"
                android:text="활성화"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/radiogroup_help_off"
                android:text="비활성화"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tv_gesture"
            android:textSize="15sp" />
        <RadioGroup
            android:id="@+id/radiogroup_gesture"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/radiogroup_gesture_on"
                android:text="활성화"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/radiogroup_gesture_off"
                android:text="비활성화"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tv_user"
            android:textSize="25sp"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_logOut"/>
        <Button
            android:id="@+id/btnwithdrawl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_withdrawal"/>
    </LinearLayout>
</RelativeLayout>