<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnvoice"
                android:layout_width="70dp"
                android:layout_height="45dp"
                android:layout_gravity="left"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:drawableRight="@drawable/voice"
                android:background="#00ff0000"
                android:text="@string/btn_Voice" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/yak_air"
                android:text="@string/tv_calendar"
                android:textSize="35sp" />

            <Button
                android:id="@+id/btnhome"
                android:layout_width="75dp"
                android:layout_height="45dp"
                android:layout_gravity="right"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="#00ff0000"
                android:drawableLeft="@drawable/home"
                android:text="@string/btn_Home" />
        </FrameLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="45dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1">

            <com.prolificinteractive.materialcalendarview.MaterialCalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:theme="@style/CalenderViewCustom"
                app:mcv_dateTextAppearance="@style/CalenderViewDateCustomText"
                app:mcv_weekDayTextAppearance="@style/CalenderViewWeekCustomText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yak_air"
                android:text="일정"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_today"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yak_air"
                android:text="@string/tv_today"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/calendarView" />

            <EditText
                android:id="@+id/contextEditText"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="내용을 입력하세요."
                android:inputType="textMultiLine"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/diaryTextView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yak_air"
                android:text="@string/tv_upComing"
                android:textSize="20sp" />

            <ListView
                android:id="@+id/lvCal2"
                android:layout_width="match_parent"
                android:layout_height="95dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/yak_air"
                android:text="@string/btn_fileAdd">


            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnFix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/yak_air"
                android:text="@string/btn_fix">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/yak_air"
                android:text="@string/btn_delete">

            </androidx.appcompat.widget.AppCompatButton>

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>