<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnvoice"
                android:layout_width="70dp"
                android:layout_height="45dp"
                android:layout_gravity="left"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:drawableRight="@drawable/voice"
                android:background="#00ff0000"
                android:text="@string/btn_Voice" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="WHO?약"
                android:fontFamily="@font/yak_pro"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnUserpage"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginTop="3dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/userpage"
                android:background="#00ff0000"/>

        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Layout_Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/yak_air"
            android:text="@string/btn_Search">

        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnScan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/yak_air"
            android:text="@string/btn_Scan">

        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSchedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/yak_air"
            android:text="@string/btn_Schedule">

        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBoard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/yak_air"
            android:text="@string/btn_Board">

        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/Layout_Btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView
            android:id="@+id/lv_HomeNotice"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" />
<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="오늘의 일정"-->
<!--            android:layout_marginTop="15dp"-->
<!--            android:layout_marginBottom="15dp"-->
<!--            android:textSize="25sp"-->
<!--            android:fontFamily="@font/yak_air"-->
<!--            android:textStyle="bold"/>-->
        <ListView
            android:id="@+id/lv_HOMECalendar"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" />

    </LinearLayout>




</RelativeLayout>